# gsa-exercises

Project03/: README.md
Project04/: README.md
Project05/: README.md
Project05/src/: .gitignore  CMakeLists.txt  ac_readmap.c  aho_corasick.c  aho_corasick.h  buffer.c  fasta.h  match.c  match.h  match_readmap.c  suffix_array.h
Week04/: README.md
Week06/: README.md
Week07/: README.md
Week08/: README.md
Week09/: README.md
Week10/: README.md
Week10/test/: test.py
Week11/: README.md
